FIX: TABLE ALIGNMENTS

--- a/src/app/activity-downtime/activity-downtime.component.css
+++ b/src/app/activity-downtime/activity-downtime.component.css
@@ -40,3 +40,8 @@ button:not(.close) {
     width: 100%;
     max-width: 200px;
 }
+
+td {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+}
